@@ -2735,7 +2735,7 @@ X-ray binary
 		<wrap>False</wrap>
 		<value>10</value>
 		<lower>0</lower>
-		<upper>1000</upper>
+		<upper>100000</upper>
 		<step>0.1</step>
 		<page>1</page>
 		<page_size>10</page_size>
@@ -3071,7 +3071,7 @@ X-ray binary
 		<wrap>False</wrap>
 		<value>0</value>
 		<lower>0</lower>
-		<upper>100</upper>
+		<upper>100000</upper>
 		<step>0.1</step>
 		<page>1</page>
 		<page_size>10</page_size>
@@ -3104,7 +3104,7 @@ X-ray binary
 		<wrap>False</wrap>
 		<value>100</value>
 		<lower>0</lower>
-		<upper>100</upper>
+		<upper>100000</upper>
 		<step>0.1</step>
 		<page>1</page>
 		<page_size>10</page_size>
